--- a/spring-comment-service/src/main/resources/application.properties
+++ b/spring-comment-service/src/main/resources/application.properties
@@ -5,4 +5,4 @@ spring.datasource.username=user
 spring.datasource.password=123456
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 # Enable jpa create table mode
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=create-drop
